# hermes-dreaming

./: .gitignore  README.md  pyproject.toml
docs/: deep-ranking-signals.md  implementation-brief.md  implementation-plan.md
hermes_dreaming/: __init__.py  cli.py  config.py  dreams_md.py  memory_io.py  orchestration.py  paths.py  plugin.yaml  scoring.py  session_reader.py  sidecar.py  state.py
hermes_dreaming/commands/: compact.py  install_cron.py  review.py  run.py  status.py
hermes_dreaming/tools/: apply_memory_op.py  finalize_run.py  get_state.py  record_decisions.py  stage_candidates.py  write_dream_report.py
tests/: test_apply_memory_op.py  test_install_cron.py  test_memory_io.py  test_orchestration.py  test_scoring.py
tests/fixtures/: memory_duplicates.md  memory_with_meat.md
